--- a/client/client/scripts/navigation/directives/cam-tasklist-navigation.html
+++ b/client/client/scripts/navigation/directives/cam-tasklist-navigation.html
@@ -24,7 +24,8 @@
        id="cam-tasklist-navigation">
     <ul class="nav navbar-nav navbar-right">
 
-      <li ng-repeat="actionProvider in navbarActions">
+      <li ng-repeat="actionProvider in navbarActions"
+          ng-class="actionProvider.id">
         <view cam-if-logged-in
               ng-cloak
               provider="actionProvider"
