chore(styles): work on styling
Related to CAM-3881

--- a/client/client/scripts/pages/userCreate.html
+++ b/client/client/scripts/pages/userCreate.html
@@ -1,5 +1,5 @@
 <!-- # CE - camunda-admin-ui/client/scripts/pages/userCreate.html -->
-<div class="container">
+<div class="container-fluid">
   <section id="users">
     <div class="row">
       <div class="page-header">
