--- a/client/client/scripts/pages/groupEdit.html
+++ b/client/client/scripts/pages/groupEdit.html
@@ -1,5 +1,5 @@
 <!-- # CE - camunda-admin-ui/client/scripts/pages/groupEdit.html -->
-<div class="container">
+<div class="container-fluid">
   <section id="groups">
     <div class="row">
       <div class="page-header">
