--- a/client/client/scripts/pages/groups.html
+++ b/client/client/scripts/pages/groups.html
@@ -1,7 +1,9 @@
 <!-- # CE - camunda-admin-ui/client/scripts/pages/groups.html -->
-<div class="container" ng-cloak>
-  <div class="page-header">
-    <h1>Groups</h1>
+<div class="container-fluid" ng-cloak>
+  <div class="row">
+    <div class="page-header">
+      <h1>Groups</h1>
+    </div>
   </div>
 
   <div ng-show="availableOperations.create">
