--- a/client/client/scripts/pages/setup.html
+++ b/client/client/scripts/pages/setup.html
@@ -1,5 +1,5 @@
 <!-- # CE - camunda-admin-ui/client/scripts/pages/setup.html -->
-<div class="container">
+<div class="container-fluid">
   <section id="users"
            ng-switch on="created">
     <div class="row">
