--- a/client/client/scripts/pages/system.html
+++ b/client/client/scripts/pages/system.html
@@ -1,5 +1,5 @@
 <!-- # CE - camunda-admin-ui/client/scripts/pages/system.html -->
-<div class="container"
+<div class="container-fluid"
      ng-cloak>
   <section id="groups">
     <div class="row">
