--- a/client/client/scripts/directives/processDiagramPreview.html
+++ b/client/client/scripts/directives/processDiagramPreview.html
@@ -4,6 +4,7 @@
 <div ng-show="diagramXML">
   <div cam-widget-bpmn-viewer
     diagram-data='diagramXML'
+    control='control'
     disable-navigation='true'>
   </div>
 </div>
