--- a/client/client/scripts/pages/process-definition.html
+++ b/client/client/scripts/pages/process-definition.html
@@ -173,29 +173,30 @@
 
               <div class="search search-date"
                    ng-repeat="date in filterData.start">
+                <div class="wrapper">
+                  <select ng-model="date.type"
+                          ng-options="item as item for item in dateTypeItems"
+                          required
+                          class="form-control"
+                          cam-dynamic-name="startDateFilterType{{$index}}"
+                          ng-change="dateFilterTypeChanged(filterForm['startDateFilterType0'], filterForm['startDateFilterType1'])">
+                  </select>
 
-                <select ng-model="date.type"
-                        ng-options="item as item for item in dateTypeItems"
-                        required
-                        class="form-control"
-                        cam-dynamic-name="startDateFilterType{{$index}}"
-                        ng-change="dateFilterTypeChanged(filterForm['startDateFilterType0'], filterForm['startDateFilterType1'])">
-                </select>
+                  <div class="removable-input">
+                    <input type="text"
+                           class="form-control"
+                           date
+                           required
+                           ng-change="filterChanged()"
+                           ng-model="date.value"
+                           cam-dynamic-name="startDateFilterValue{{$index}}" />
 
-                <div class="removable-input">
-                  <input type="text"
-                         class="form-control"
-                         date
-                         required
-                         ng-change="filterChanged()"
-                         ng-model="date.value"
-                         cam-dynamic-name="startDateFilterValue{{$index}}" />
-
-                  <button class="btn btn-link btn-xs btn-control remove-date-filter"
-                          ng-click="removeStartDateFilter(date)">
-                    <span class="glyphicon glyphicon-remove"></span>
-                  </button>
-                </div>
+                    <button class="btn btn-link btn-xs btn-control remove-date-filter"
+                            ng-click="removeStartDateFilter(date)">
+                      <span class="glyphicon glyphicon-remove"></span>
+                    </button>
+                  </div>
+                </div><!-- / .wrapper -->
 
                 <div class="note note-error note-small"
                      ng-if="filterForm['startDateFilterValue' + $index].$invalid">
@@ -206,22 +207,22 @@
                   <div ng-show="filterForm['startDateFilterValue' + $index].$error.date && !filterForm['startDateFilterValue' + $index].$error.required">
                     Syntax for a date is <code>yyyy-MM-ddTHH:mm:ss</code>.
                   </div>
-                </div>
+                </div><!-- / .error -->
 
-              </div>
+                <div class="note note-error note-small"
+                     ng-if="filterForm['startDateFilterType0'].$invalid && filterForm['startDateFilterType1'].$invalid">
+                  <div ng-show="filterForm['startDateFilterType0'].$error.dateTypeEqual && filterForm['startDateFilterType1'].$error.dateTypeEqual">
+                    Only the combination <code>after/before</code> is allowed.
+                  </div>
+                </div><!-- / .error -->
 
-              <div class="note note-error note-small"
-                   ng-if="filterForm['startDateFilterType0'].$invalid && filterForm['startDateFilterType1'].$invalid">
-                <div ng-show="filterForm['startDateFilterType0'].$error.dateTypeEqual && filterForm['startDateFilterType1'].$error.dateTypeEqual">
-                  Only the combination <code>after/before</code> is allowed.
-                </div>
-              </div>
+                <a class="glyphicon glyphicon-plus-sign pull-right"
+                   tooltip="Add a start date filter"
+                   tooltip-placement="right"
+                   ng-click="addStartDateFilter()"
+                   ng-if="filterData.start.length < 2"></a>
+              </div><!-- ./ ng-repeat -->
 
-              <a class="glyphicon glyphicon-plus-sign pull-right"
-                 tooltip="Add a start date filter"
-                 tooltip-placement="right"
-                 ng-click="addStartDateFilter()"
-                 ng-if="filterData.start.length < 2"></a>
             </li>
 
             <li class="variable-filter filter"
