chore(styles): update templates html
Related to CAM-3881

--- a/client/client/scripts/pages/authorizations.html
+++ b/client/client/scripts/pages/authorizations.html
@@ -170,10 +170,9 @@
 
           <tr ng-hide="isCreateNewAuthorization">
             <td colspan="5">
-              <a class="btn btn-link"
-                 ng-click="toggleCreateNewForm()">
-                <span class="glyphicon glyphicon-plus"></span>
+              <a ng-click="toggleCreateNewForm()">
                 Create New
+                <span class="glyphicon glyphicon-plus-sign"></span>
               </a>
             </td>
           </tr>
