--- a/client/client/scripts/pages/groupCreate.html
+++ b/client/client/scripts/pages/groupCreate.html
@@ -1,16 +1,13 @@
 <!-- # CE - camunda-admin-ui/client/scripts/pages/groupCreate.html -->
 <div class="container-fluid">
-  <section id="groups">
-    <div class="row">
-      <div class="page-header">
-        <h1>Create New Group</h1>
-      </div>
+  <section class="row">
+    <div class="page-header">
+      <h1>Create New Group</h1>
     </div>
 
-    <div class="row">
-      <form class="form-horizontal"
-            name="createGroupForm">
-
+    <form class="form-horizontal"
+          name="createGroupForm">
+      <div class="col-xs-12">
         <div class="form-group">
           <label class="control-label col-sm-4"
                  for="inputGroupId">Group Id*</label>
@@ -71,8 +68,8 @@
           </div>
         </div>
 
-      </form>
-    </div>
+      </div>
+    </form>
   </section>
 </div>
 <!-- / CE - camunda-admin-ui/client/scripts/pages/groupCreate.html -->
