--- a/client/client/scripts/pages/groups.html
+++ b/client/client/scripts/pages/groups.html
@@ -7,10 +7,10 @@
   </div>
 
   <div ng-show="availableOperations.create">
-    <a class="btn btn-default pull-right"
+    <a class="btn btn-link pull-right"
        href="#/group-create">
-      <span class="glyphicon glyphicon-plus"></span>
       New Group
+      <span class="glyphicon glyphicon-plus-sign"></span>
     </a>
   </div>
 
