--- a/client/client/scripts/pages/setup.html
+++ b/client/client/scripts/pages/setup.html
@@ -4,7 +4,10 @@
            ng-switch on="created">
     <div class="row">
       <div class="page-header">
-        <h1><span class="glyphicon glyphicon-user-large"></span> Setup</h1>
+        <h1>
+          <!-- <span class="glyphicon glyphicon-user"></span> -->
+          Setup
+        </h1>
       </div>
     </div>
 
