--- a/client/client/scripts/pages/system.html
+++ b/client/client/scripts/pages/system.html
@@ -1,32 +1,28 @@
 <!-- # CE - camunda-admin-ui/client/scripts/pages/system.html -->
 <div class="container-fluid"
      ng-cloak>
-  <section id="groups">
-    <div class="row">
-      <div class="page-header">
-        <h1>System Settings</h1>
+  <section class="row">
+    <div class="page-header">
+      <h1>System Settings</h1>
+    </div>
+
+    <div class="col-md-3">
+      <div class="well sidebar-nav">
+        <ul class="nav nav-list">
+          <li class="nav-header">Categrories</li>
+
+          <li ng-class="activeClass('section='+systemSettingsProvider.id)"
+              ng-repeat="systemSettingsProvider in systemSettingsProviders">
+            <a href="#/system/?section={{systemSettingsProvider.id}}">
+              {{systemSettingsProvider.label}}
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-md-3">
-        <div class="well sidebar-nav">
-          <ul class="nav nav-list">
-            <li class="nav-header">Categrories</li>
-
-            <li ng-class="activeClass('section='+systemSettingsProvider.id)"
-                ng-repeat="systemSettingsProvider in systemSettingsProviders">
-              <a href="#/system/?section={{systemSettingsProvider.id}}">
-                {{systemSettingsProvider.label}}
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="col-md-9">
-        <view provider="activeSettingsProvier" />
-      </div>
+    <div class="col-md-9">
+      <view provider="activeSettingsProvier" />
     </div>
   </section>
 </div>
