--- a/client/client/scripts/pages/userCreate.html
+++ b/client/client/scripts/pages/userCreate.html
@@ -1,15 +1,16 @@
 <!-- # CE - camunda-admin-ui/client/scripts/pages/userCreate.html -->
 <div class="container-fluid">
-  <section id="users">
-    <div class="row">
-      <div class="page-header">
-        <h1><span class="glyphicon glyphicon-user-large"></span> Create New User</h1>
-      </div>
+  <section class="row">
+    <div class="page-header">
+      <h1>
+        <!-- <span class="glyphicon glyphicon-user"></span> -->
+        Create New User
+      </h1>
     </div>
-    <div class="row">
-      <form class="form-horizontal"
-            name="createUserForm">
 
+    <form class="form-horizontal"
+          name="createUserForm">
+      <div class="col-xs-12">
         <legend>User Account</legend>
 
         <div class="form-group">
@@ -147,8 +148,8 @@
           </div>
         </div>
 
-      </form>
-    </div>
+      </div>
+    </form>
   </section>
 </div>
 <!-- / CE - camunda-admin-ui/client/scripts/pages/userCreate.html -->
