--- a/client/client/scripts/pages/users.html
+++ b/client/client/scripts/pages/users.html
@@ -2,14 +2,18 @@
 <div class="container-fluid" ng-cloak>
   <div class="row">
     <div class="page-header">
-      <h1>Users</h1>
+      <h1>
+        <!-- <span class="glyphicon glyphicon-user"></span> -->
+        Users
+      </h1>
     </div>
   </div>
 
   <div ng-show="availableOperations.create">
-    <a class="btn btn-default pull-right" href="#/user-create">
-      <span class="glyphicon glyphicon-plus"></span>
+    <a class="btn btn-default pull-right"
+       href="#/user-create">
       New User
+      <span class="glyphicon glyphicon-plus-sign"></span>
     </a>
   </div>
 
