--- a/client/client/scripts/pages/authorizations.html
+++ b/client/client/scripts/pages/authorizations.html
@@ -38,11 +38,19 @@
         <tbody>
           <tr ng-if="loadingState === 'LOADED'"
               ng-repeat="authorization in authorizations | orderBy:getIdentityId:false">
-            <td class="authorization-type">
+            <td class="authorization-type" ng-if="!authorization.inUpdate">
               {{getType(authorization)}}
             </td>
+            <td class="authorization-type" ng-if="!!authorization.inUpdate">
+              <select ng-model="authorization.type"
+                      class="select-auth-type form-control">
+                <option value="0">GLOBAL</option>
+                <option value="1">ALLOW</option>
+                <option value="2">DENY</option>
+              </select>
+            </td>
 
-            <td class="user group">
+            <td class="user group" ng-if="!authorization.inUpdate">
               <span ng-show="authorization.userId"
                     tooltip="User">
                 <span class="glyphicon glyphicon-user"></span>
@@ -55,19 +63,98 @@
                 {{authorization.groupId}}
               </span>
             </td>
+            <td class="identity-id" ng-if="!!authorization.inUpdate">
+              <div class="input-group">
+                <a class="input-group-addon"
+                   ng-disabled="isIdentityIdDisabled()"
+                   ng-click="setIdentityTypeFor(getIdentityTypeFor(authorization) == 'Group' ? 'User' : 'Group', authorization)"
+                   tooltip="{{getIdentityTypeFor(authorization)}}">
+                  <span class="glyphicon"
+                        ng-class="{'glyphicon-th': getIdentityTypeFor(authorization) == 'Group', 'glyphicon-user': getIdentityTypeFor(authorization) == 'User'}"></span>
+                </a>
 
-            <td class="permissions">
+                <input type="text"
+                       class="input-auth-name form-control"
+                       placeholder="User / Group Id"
+                       ng-disabled="isIdentityIdDisabled()"
+                       ng-model="authorization.identityId"/>
+              </div>
+            </td>
+
+            <td class="permissions" ng-if="!authorization.inUpdate">
               {{formatPermissions(authorization.permissions)}}
             </td>
+            <td class="permissions" ng-if="!!authorization.inUpdate">
+              <div class="input-group">
 
-            <td class="resource-id">
-              {{authorization.resourceId}}
+                <div class="form-control-static"
+                     ng-click="addAllPermissionsTo(authorization)">
+                  {{ formatPermissions(authorization.permissions) }}
+                </div>
+
+                <!-- using "ng-if" rather than "ng-show" to prevent style glitches -->
+                <div ng-if="authorization.permissions != 'ALL'"
+                     class="input-group-btn">
+                  <a ng-click="addAllPermissionsTo(authorization)"
+                     class="btn btn-default">
+                    <span class="glyphicon glyphicon-asterisk"></span>
+                  </a>
+                </div>
+
+                <div ng-if="availablePermissionsFor(authorization).length > 0"
+                     class="input-group-btn dropdown">
+                  <button type="button"
+                          class="btn btn-default dropdown-toggle"
+                          data-toggle="dropdown"
+                          aria-expanded="false">
+                    <span class="glyphicon glyphicon-pencil"></span>
+                    <span class="caret"></span>
+                  </button>
+
+                  <ul class="dropdown-menu dropdown-menu-right">
+                    <li ng-repeat="perm in availablePermissionsFor(authorization)">
+                      <a ng-click="addPermissionTo(perm, authorization)">{{perm}}</a>
+                    </li>
+                  </ul>
+                </div><!-- /input-btn-group -->
+              </div><!-- /input-group -->
             </td>
 
-            <td class="action">
+            <td class="resource-id" ng-if="!authorization.inUpdate">
+              {{authorization.resourceId}}
+            </td>
+            <td class="resource-id" ng-if="!!authorization.inUpdate">
+              <input type="text"
+                     id="inputResourceId"
+                     ng-model="authorization.resourceId"
+                     class="in-place-edit form-control" />
+
+              <span ng-show="selectedResourceType==0"
+                    class="text-muted">(cockpit or tasklist or *)</span>
+            </td>
+
+            <td class="action" ng-if="!authorization.inUpdate">
+              <a ng-click="updateAuthorization(authorization)">
+                Update
+              </a>
               <a ng-click="deleteAuthorization(authorization)">
                 Delete
               </a>
+            </td>
+            <td class="action" ng-if="!!authorization.inUpdate">
+              <div class="btn-group">
+                <button type="submit"
+                        class="btn btn-primary"
+                        ng-disabled="!isAuthorizationValid(authorization)"
+                        ng-click="confirmUpdateAuthorization(authorization)">
+                  <span class="glyphicon glyphicon-ok "></span>
+                </button>
+
+                <a class="btn btn-default"
+                   ng-click="cancelUpdateAuthorization(authorization)">
+                  <span class="glyphicon glyphicon-ban-circle"></span>
+                </a>
+              </div>
             </td>
           </tr>
           <!-- ....................................... -->
