fix(typo): correct the categories heading
Related to CAM-3929

--- a/client/client/scripts/pages/system.html
+++ b/client/client/scripts/pages/system.html
@@ -9,7 +9,7 @@
     <div class="col-md-3">
       <div class="well sidebar-nav">
         <ul class="nav nav-list">
-          <li class="nav-header">Categrories</li>
+          <li class="nav-header">Categories</li>
 
           <li ng-class="activeClass('section='+systemSettingsProvider.id)"
               ng-repeat="systemSettingsProvider in systemSettingsProviders">
